k8s/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: flask-app
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    5000:
      mode: PERMISSIVE
