k8s/gateway-forwarder.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-gateway-forwarder
  namespace: flask-app
spec:
  type: ExternalName
  externalName: istio-gateway.istio-system.svc.cluster.local
  ports:
    - port: 80
      name: http
      targetPort: 80
