k8s/jenkins-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: flask-app
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
      name: http
