k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-flask
  namespace: production
  labels:
    app: devsecops-flask
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
  selector:
    app: devsecops-flask
