k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devsecops-gateway
  namespace: flask-app
spec:
  selector:
    istio: gateway # use default gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
  namespace: flask-app
spec:
  hosts:
    - "*"
  gateways:
    - devsecops-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: devsecops-flask
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
