k8s/istio-resources-flask-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: flask-app
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-app
  namespace: flask-app
spec:
  host: devsecops-flask
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
  namespace: flask-app
spec:
  hosts:
    - "*"
  gateways:
    - production/devsecops-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: devsecops-flask.production.svc.cluster.local
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
